--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "grunt-my-rev",
+  "name": "grunt-jason-rev",
   "description": "revisioning static resource in my project",
   "version": "0.1.0",
-  "homepage": "https://github.com/Jason618/grunt-my-rev",
+  "homepage": "https://github.com/Jason618/grunt-jason-rev",
   "author": {
     "name": "Jason",
     "email": "taoxirou@163.com",
@@ -10,15 +10,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/Jason618/grunt-my-rev.git"
+    "url": "git://github.com/Jason618/grunt-jason-rev.git"
   },
   "bugs": {
-    "url": "https://github.com/Jason618/grunt-my-rev/issues"
+    "url": "https://github.com/Jason618/grunt-jason-rev/issues"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/Jason618/grunt-my-rev/blob/master/LICENSE-MIT"
+      "url": "https://github.com/Jason618/grunt-jason-rev/blob/master/LICENSE-MIT"
     }
   ],
   "engines": {
@@ -28,10 +28,11 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "^0.9.2",
+    "crypto": "0.0.3",
+    "grunt": "~0.4.5",
     "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-nodeunit": "^0.3.3",
-    "grunt": "~0.4.5"
+    "grunt-contrib-jshint": "^0.9.2",
+    "grunt-contrib-nodeunit": "^0.3.3"
   },
   "keywords": [
     "gruntplugin"
