--- a/package.json
+++ b/package.json
@@ -29,10 +29,8 @@
   },
   "devDependencies": {
     "crypto": "0.0.3",
-    "grunt": "~0.4.5",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-jshint": "^0.9.2",
-    "grunt-contrib-nodeunit": "^0.3.3"
+    "each-async": "^1.1.1",
+    "grunt": "~0.4.5"
   },
   "keywords": [
     "gruntplugin"
