--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-jason-rev",
   "description": "revisioning static resource in my project",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "homepage": "https://github.com/Jason618/grunt-jason-rev",
   "author": {
     "name": "Jason",
@@ -33,6 +33,6 @@
     "grunt": "~0.4.5"
   },
   "keywords": [
-    "gruntplugin"
+    "assets,hash,css,html,javascript"
   ]
 }
